[package]
name = "maestro"
version = "0.2.0"
authors = ["Kyle Strohbeck <kstrohbeck@gmail.com>"]
edition = "2018"

[dependencies]
id3 = "0.5.1"
indicatif = "0.15.0"
once_cell = "1.4.0"
rayon = "1.3.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_yaml = "0.8.13"
structopt = "0.3.15"
unicode-normalization = "0.1.13"
walkdir = "2.3.1"

[dependencies.image]
version = "0.23.6"
default-features = false
features = ["jpeg", "png"]

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tempfile = "3.1.0"
matches = "0.1.8"
