[package]
name = "maestro"
version = "0.3.2"
authors = ["Kyle Strohbeck <kstrohbeck@gmail.com>"]
edition = "2018"

[dependencies]
id3 = "0.6.4"
indicatif = "0.16.2"
once_cell = "1.8.0"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
structopt = "0.3.21"
unicode-normalization = "0.1.19"
walkdir = "2.3.2"

[dependencies.image]
version = "0.23.14"
default-features = false
features = ["jpeg", "png"]

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tempfile = "3.2.0"
matches = "0.1.8"
