[package]
name = "maestro"
version = "0.3.3"
authors = ["Kyle Strohbeck <kstrohbeck@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
id3 = "1.0"
indicatif = "0.17"
once_cell = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
structopt = "0.3"
thiserror = "1.0"
unicode-normalization = "0.1"
walkdir = "2.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg", "png"]

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.2"
